提交比赛结果

--- a/predict_stock.ipynb
+++ b/predict_stock.ipynb
@@ -2026,10 +2026,10 @@
     }
    ],
    "source": [
-    "pd.set_option('display.max_rows', None)  # 显示所有行\n",
-    "pd.set_option('display.max_columns', None)  # 显示所有列\n",
-    "pd.set_option('display.width', None)  # 设置显示宽度为无限制\n",
-    "pd.set_option('display.float_format', lambda x: '%.6f' % x)  # 设置浮点数显示格式，保留6位小数\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option('display.width', None)\n",
+    "pd.set_option('display.float_format', lambda x: '%.6f' % x)\n",
     "\n",
     "# 生成结果表格\n",
     "result_df = pd.DataFrame(data_list)\n",
